--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<nav class="bg-dark navbar navbar-main px-0 py-1 sticky-top">
 		<div class="container">
 			<a class="navbar-brand" href="/">
-				<img alt="Logo Prêmios do Barba" src="img/logo-premios-do-barba.png" loading="lazy">
+				<img alt="Logo Prêmios do Barba" src="logo-premios-do-barba.png" loading="lazy">
 			</a>
 
 			<button class="btn btn-outline-light btn-open-menu d-lg-none " aria-label="Abrir Menu"><i class="fas fa-bars mr-2" aria-hidden="true"></i><span class="btn-text">Menu</span></button>
@@ -61,25 +61,25 @@
 	</nav><div class="slider-main">
 	<div>
 		<picture>
-			<source srcset="img/banners/banner01-mobile.png"
+			<source srcset="banners/banner01-mobile.png"
 					media="(max-width: 992px)" />
 			
-			<source srcset="img/banners/banner01.png"
+			<source srcset="banners/banner01.png"
 					media="(min-width: 992px)" />
 			
-			<img class="img-fluid w-100" src="img/banners/banner01.png" alt="" />
+			<img class="img-fluid w-100" src="banners/banner01.png" alt="" />
 		</picture>
 	</div>
 
 	<div>
 		<picture>
-			<source srcset="img/banners/banner01-mobile.png"
+			<source srcset="banners/banner01-mobile.png"
 					media="(max-width: 992px)" />
 			
-			<source srcset="img/banners/banner01.png"
+			<source srcset="banners/banner01.png"
 					media="(min-width: 992px)" />
 			
-			<img class="img-fluid w-100" src="img/banners/banner01.png" alt="" />
+			<img class="img-fluid w-100" src="banners/banner01.png" alt="" />
 		</picture>
 	</div>
 </div><section class="section-proximos-sorteios text-white py-5">
@@ -93,7 +93,7 @@
 
 			<div class="sorteio-item col-4">
 				<div class="sorteio-img">
-					<img class="img-fluid" src="img/produtos/001.png">
+					<img class="img-fluid" src="produtos/001.png">
 				</div>
 
 				<div class="sorteio-info mt-3 mb-4">
@@ -108,7 +108,7 @@
 
 			<div class="sorteio-item col-4">
 				<div class="sorteio-img">
-					<img class="img-fluid" src="img/produtos/001.png">
+					<img class="img-fluid" src="produtos/001.png">
 				</div>
 
 				<div class="sorteio-info mt-3 mb-4">
@@ -123,7 +123,7 @@
 
 			<div class="sorteio-item col-4">
 				<div class="sorteio-img">
-					<img class="img-fluid" src="img/produtos/001.png">
+					<img class="img-fluid" src="produtos/001.png">
 				</div>
 
 				<div class="sorteio-info mt-3 mb-4">
@@ -138,7 +138,7 @@
 
 			<div class="sorteio-item col-4">
 				<div class="sorteio-img">
-					<img class="img-fluid" src="img/produtos/001.png">
+					<img class="img-fluid" src="produtos/001.png">
 				</div>
 
 				<div class="sorteio-info mt-3 mb-4">
@@ -163,7 +163,7 @@
 		<div class="row">
 			<div class="ganhadores-item col-6 col-md-4 mb-5">
 				<div class="ganhadores-img mb-3 mb-lg-4">
-					<img alt="" class="img-fluid" src="img/ganhadores/joao-silva.png">
+					<img alt="" class="img-fluid" src="ganhadores/joao-silva.png">
 				</div>
 				<div class="ganhadores-info">
 					<h3 class="ganhador-name mb-0">João Silva</h3>
@@ -174,7 +174,7 @@
 
 			<div class="ganhadores-item col-6 col-md-4 mb-5">
 				<div class="ganhadores-img mb-3 mb-lg-4">
-					<img alt="" class="img-fluid" src="img/ganhadores/joao-silva.png">
+					<img alt="" class="img-fluid" src="ganhadores/joao-silva.png">
 				</div>
 				<div class="ganhadores-info">
 					<h3 class="ganhador-name mb-0">João Silva</h3>
@@ -185,7 +185,7 @@
 
 			<div class="ganhadores-item col-6 col-md-4 mb-5">
 				<div class="ganhadores-img mb-3 mb-lg-4">
-					<img alt="" class="img-fluid" src="img/ganhadores/joao-silva.png">
+					<img alt="" class="img-fluid" src="ganhadores/joao-silva.png">
 				</div>
 				<div class="ganhadores-info">
 					<h3 class="ganhador-name mb-0">João Silva</h3>
@@ -204,35 +204,35 @@
 
 		<div class="row justify-content-center">
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="img/parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="img/parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="img/parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="img/parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="img/parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="img/parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="img/parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="img/parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
 			</div>
 		</div>
 	</div>
