--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
 	</nav><div class="slider-main">
 	<div>
 		<picture>
-			<source srcset="banners/banner01-mobile.png"
+			<source srcset="banner01-mobile.png"
 					media="(max-width: 992px)" />
 			
-			<source srcset="banners/banner01.png"
+			<source srcset="banner01.png"
 					media="(min-width: 992px)" />
 			
-			<img class="img-fluid w-100" src="banners/banner01.png" alt="" />
+			<img class="img-fluid w-100" src="banner01.png" alt="" />
 		</picture>
 	</div>
 
 	<div>
 		<picture>
-			<source srcset="banners/banner01-mobile.png"
+			<source srcset="banner01-mobile.png"
 					media="(max-width: 992px)" />
 			
-			<source srcset="banners/banner01.png"
+			<source srcset="banner01.png"
 					media="(min-width: 992px)" />
 			
-			<img class="img-fluid w-100" src="banners/banner01.png" alt="" />
+			<img class="img-fluid w-100" src="banner01.png" alt="" />
 		</picture>
 	</div>
 </div><section class="section-proximos-sorteios text-white py-5">
@@ -93,7 +93,7 @@
 
 			<div class="sorteio-item col-4">
 				<div class="sorteio-img">
-					<img class="img-fluid" src="produtos/001.png">
+					<img class="img-fluid" src="001.png">
 				</div>
 
 				<div class="sorteio-info mt-3 mb-4">
@@ -108,7 +108,7 @@
 
 			<div class="sorteio-item col-4">
 				<div class="sorteio-img">
-					<img class="img-fluid" src="produtos/001.png">
+					<img class="img-fluid" src="001.png">
 				</div>
 
 				<div class="sorteio-info mt-3 mb-4">
@@ -123,7 +123,7 @@
 
 			<div class="sorteio-item col-4">
 				<div class="sorteio-img">
-					<img class="img-fluid" src="produtos/001.png">
+					<img class="img-fluid" src="001.png">
 				</div>
 
 				<div class="sorteio-info mt-3 mb-4">
@@ -138,7 +138,7 @@
 
 			<div class="sorteio-item col-4">
 				<div class="sorteio-img">
-					<img class="img-fluid" src="produtos/001.png">
+					<img class="img-fluid" src="001.png">
 				</div>
 
 				<div class="sorteio-info mt-3 mb-4">
@@ -163,7 +163,7 @@
 		<div class="row">
 			<div class="ganhadores-item col-6 col-md-4 mb-5">
 				<div class="ganhadores-img mb-3 mb-lg-4">
-					<img alt="" class="img-fluid" src="ganhadores/joao-silva.png">
+					<img alt="" class="img-fluid" src="joao-silva.png">
 				</div>
 				<div class="ganhadores-info">
 					<h3 class="ganhador-name mb-0">João Silva</h3>
@@ -174,7 +174,7 @@
 
 			<div class="ganhadores-item col-6 col-md-4 mb-5">
 				<div class="ganhadores-img mb-3 mb-lg-4">
-					<img alt="" class="img-fluid" src="ganhadores/joao-silva.png">
+					<img alt="" class="img-fluid" src="joao-silva.png">
 				</div>
 				<div class="ganhadores-info">
 					<h3 class="ganhador-name mb-0">João Silva</h3>
@@ -185,7 +185,7 @@
 
 			<div class="ganhadores-item col-6 col-md-4 mb-5">
 				<div class="ganhadores-img mb-3 mb-lg-4">
-					<img alt="" class="img-fluid" src="ganhadores/joao-silva.png">
+					<img alt="" class="img-fluid" src="joao-silva.png">
 				</div>
 				<div class="ganhadores-info">
 					<h3 class="ganhador-name mb-0">João Silva</h3>
@@ -204,35 +204,35 @@
 
 		<div class="row justify-content-center">
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="harley-davidson.png">
 			</div>
 
 			<div class="col-4 col-md-3 col-lg-2 mb-4 mb-md-5">
-				<img alt="" class="img-fluid" src="parceiros/harley-davidson.png">
+				<img alt="" class="img-fluid" src="harley-davidson.png">
 			</div>
 		</div>
 	</div>
@@ -260,9 +260,9 @@
 					<p class="mb-0"><a href="mailto:contato@premiosdobarba.com.br">contato@premiosdobarba.com.br</a></p>
 
 					<div class="d-flex mt-4">
-						<a class="pr-1 mr-2" href="http://www.instagram.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/instagram.png"></a>
-						<a class="pr-1 mr-2" href="http://www.facebook.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/facebook.png"></a>
-						<a class="pr-1 mr-2" href="http://www.youtube.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/youtube.png"></a>
+						<a class="pr-1 mr-2" href="http://www.instagram.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="instagram.png"></a>
+						<a class="pr-1 mr-2" href="http://www.facebook.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="facebook.png"></a>
+						<a class="pr-1 mr-2" href="http://www.youtube.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="youtube.png"></a>
 					</div>
 				</div>
 				
@@ -276,8 +276,8 @@
 					<p>Entre para nosso grupo e receba informaçoes e dicas.</p>
 
 					<div class="d-flex mt-4">
-						<a class="pr-1 mr-2" href="#" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/telegram.png"></a>
-						<a class="pr-1 mr-2" href="#" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/whatsapp.png"></a>
+						<a class="pr-1 mr-2" href="#" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="telegram.png"></a>
+						<a class="pr-1 mr-2" href="#" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="whatsapp.png"></a>
 					</div>
 				</div>
 
