--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<nav class="bg-dark navbar navbar-main px-0 py-1 sticky-top">
 		<div class="container">
 			<a class="navbar-brand" href="/">
-				<img alt="Logo Prêmios do Barba" src="logo-premios-do-barba.png" loading="lazy">
+				<img alt="Logo Prêmios do Barba" src="logo-premios-do-barba@3x.png" loading="lazy" style="max-height: 80px;">
 			</a>
 
 			<button class="btn btn-outline-light btn-open-menu d-lg-none " aria-label="Abrir Menu"><i class="fas fa-bars mr-2" aria-hidden="true"></i><span class="btn-text">Menu</span></button>
