--- a/produto.html
+++ b/produto.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" lang="pt-br">
 <head>
@@ -18,15 +16,15 @@
 	<meta property="og:image:width" content="800">
 	<meta property="og:image:height" content="600">
 	<link rel="icon" href="favicon.png">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/all.min.css">
-	<link rel="stylesheet" href="css/site.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="site.css">
 </head>
 <body class="pagina-produto">
 	<nav class="bg-dark navbar navbar-main px-0 py-1 sticky-top">
 		<div class="container">
 			<a class="navbar-brand" href="/">
-				<img alt="Logo Prêmios do Barba" src="img/logo-premios-do-barba.png" loading="lazy">
+				<img alt="Logo Prêmios do Barba" src="logo-premios-do-barba@3x.png" loading="lazy" style="max-height: 80px;">
 			</a>
 
 			<button class="btn btn-outline-light btn-open-menu d-lg-none " aria-label="Abrir Menu"><i class="fas fa-bars mr-2" aria-hidden="true"></i><span class="btn-text">Menu</span></button>
@@ -63,7 +61,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-6 mb-4 mb-lg-5">
-					<img class="img-fluid" src="img/produtos/001.png">
+					<img class="img-fluid" src="001.png">
 				</div>
 				
 				<div class="col-12 col-lg-6 text-white mb-5">
@@ -183,9 +181,9 @@
 					<p class="mb-0"><a href="mailto:contato@premiosdobarba.com.br">contato@premiosdobarba.com.br</a></p>
 
 					<div class="d-flex mt-4">
-						<a class="pr-1 mr-2" href="http://www.instagram.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/instagram.png"></a>
-						<a class="pr-1 mr-2" href="http://www.facebook.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/facebook.png"></a>
-						<a class="pr-1 mr-2" href="http://www.youtube.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/youtube.png"></a>
+						<a class="pr-1 mr-2" href="http://www.instagram.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="instagram.png"></a>
+						<a class="pr-1 mr-2" href="http://www.facebook.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="facebook.png"></a>
+						<a class="pr-1 mr-2" href="http://www.youtube.com/" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="youtube.png"></a>
 					</div>
 				</div>
 				
@@ -199,8 +197,8 @@
 					<p>Entre para nosso grupo e receba informaçoes e dicas.</p>
 
 					<div class="d-flex mt-4">
-						<a class="pr-1 mr-2" href="#" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/telegram.png"></a>
-						<a class="pr-1 mr-2" href="#" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="/img/redes-sociais/whatsapp.png"></a>
+						<a class="pr-1 mr-2" href="#" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="telegram.png"></a>
+						<a class="pr-1 mr-2" href="#" target="_blank" rel="noreferrer noopener" target="_blank"><img alt="" class="img-fluid" src="whatsapp.png"></a>
 					</div>
 				</div>
 
@@ -212,7 +210,49 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
-	<script type="text/javascript" src="js/produto.js"></script>	<script type="text/javascript" src="js/functions.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+	<script type="text/javascript">
+		$(function(){
+			
+			$(document).on('click', '.btn-open-menu', function(){
+				$('.navbar-mobile').addClass('open');
+			});
+
+			$(document).on('click', '.btn-close-menu', function(){
+				$('.navbar-mobile').removeClass('open');
+			});
+
+			$(document).on('click', '.km-btn', function(){
+				var self = $(this).closest('.km-list-item');
+
+				if(!$(self).hasClass('indisponivel')) {
+					if(self.hasClass('active')) {
+						$(self).find('.km-check').prop('checked', false);
+						$(self).removeClass('active');
+					} else {
+						$(self).find('.km-check').prop('checked', true);
+						$(self).addClass('active');
+					}
+				}
+			});
+
+			$(document).on('click', '.show-disponiveis', function(){
+				$('.indisponivel').parent().css('display', 'none');
+				$('.disponivel').parent().css('display', 'inline-block');
+			});
+
+			$(document).on('click', '.show-indisponiveis', function(){
+				$('.indisponivel').parent().css('display', 'inline-block');
+				$('.disponivel').parent().css('display', 'none');
+			});
+
+			//Remover depois
+			setTimeout(function(){
+				$('.km-list-item:eq(0), .km-list-item:eq(1), .km-list-item:eq(2)').removeClass('disponivel').addClass('indisponivel');
+			}, 1000);
+
+		});
+	</script>
 </body>
 </html>
