--- a/produto.html
+++ b/produto.html
@@ -254,5 +254,17 @@
 
 		});
 	</script>
+
+	<style type="text/css">
+		.footer-main:before {
+			background: url(../img/layout/bg-footer.svg) repeat-x center top;
+			background-size: 686px auto;
+		}
+
+		.wrapper-km-list .km-list-item .km-bg {
+			-webkit-mask: url(../img/layout/bg-km.svg) no-repeat;
+			mask: url(../img/layout/bg-km.svg) no-repeat;
+		}
+	</style>
 </body>
 </html>
