--- a/produto.html
+++ b/produto.html
@@ -262,8 +262,8 @@
 		}
 
 		.wrapper-km-list .km-list-item .km-bg {
-			-webkit-mask: url(../img/layout/bg-km.svg) no-repeat;
-			mask: url(../img/layout/bg-km.svg) no-repeat;
+			-webkit-mask: url(bg-km.svg) no-repeat;
+			mask: url(bg-km.svg) no-repeat;
 		}
 	</style>
 </body>
