--- a/produto.html
+++ b/produto.html
@@ -257,7 +257,7 @@
 
 	<style type="text/css">
 		.footer-main:before {
-			background: url(../img/layout/bg-footer.svg) repeat-x center top;
+			background: url(bg-footer.svg) repeat-x center top;
 			background-size: 686px auto;
 		}
 
