--- a/index.html
+++ b/index.html
@@ -358,5 +358,17 @@
 			}
 		});
 	</script>
+
+	<style type="text/css">
+		.footer-main:before {
+			background: url(bg-footer.svg) repeat-x center top;
+			background-size: 686px auto;
+		}
+
+		.wrapper-km-list .km-list-item .km-bg {
+			-webkit-mask: url(bg-km.svg) no-repeat;
+			mask: url(bg-km.svg) no-repeat;
+		}
+	</style>
 </body>
 </html>
